--- a/main.scss
+++ b/main.scss
@@ -36,6 +36,7 @@ main {
         left: 1rem;
         a{
             padding: 0.4rem;
+            @include transition-ease;
             &:hover {
                 color: $secondary-color;
             }
