Applied text color function

--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
 
 body {
   background-color: #272727;
-  color: #fff;
+  color: set-text-color #272727;
   height: 100vh;
   font-family: "Raleway", sans-serif;
   line-height: 1;
@@ -42,7 +42,7 @@ h1, h2, h3 {
 }
 
 a {
-  color: #fff;
+  color: set-text-color #272727;
   text-decoration: none;
 }
 
@@ -78,6 +78,6 @@ footer {
   right: 1rem;
   text-align: right;
   padding: 1rem;
-  color: #fff;
+  color: set-text-color #272727;
 }
 /*# sourceMappingURL=main.css.map */
