--- a/_home.scss
+++ b/_home.scss
@@ -12,12 +12,12 @@
     ),
     url('./img/model-1.jpg') center top;
     background-size: cover;
-    
+
     &__name {
         font-size: 5rem;
         padding-bottom: 1rem;
         margin-top: 1rem;
-        border-bottom: 2px solid #fff;
+        border-bottom: 2px solid set-text-color ($primary-color);
 
         &--last {
             color: $secondary-color;
