--- a/main.scss
+++ b/main.scss
@@ -3,7 +3,7 @@
 
 body {
     background-color: $primary-color;
-    color: #fff;
+    color: set-text-color ($primary-color);
     height: 100vh;
     font-family: "Raleway", sans-serif;
     line-height: 1;
@@ -15,7 +15,7 @@ h1, h2, h3 {
 }
 
 a {
-    color: #fff;
+    color: set-text-color ($primary-color);
     text-decoration: none;
 }
 
@@ -51,5 +51,5 @@ footer {
     right: 1rem;
     text-align: right;
     padding: 1rem;
-    color: #fff;
+    color: set-text-color ($primary-color);
 }
