--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
   font-size: 5rem;
   padding-bottom: 1rem;
   margin-top: 1rem;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid set-text-color #272727;
 }
 .home__name--last {
   color: #ff652f;
