Build burger menu, add transitions

--- a/_config.scss
+++ b/_config.scss
@@ -1,3 +1,10 @@
+/*
+NIC DGL 203
+Assignment 4B
+Student: Will Lewthwaite
+Modified Date: 26 November, 2021
+*/
+
 $primary-color:#272727;
 $secondary-color:#ff652f;
 
