--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,11 @@
+/*
+NIC DGL 203
+Assignment 4B
+Student: Will Lewthwaite
+Modified Date: 26 November, 2021
+*/
+
+
 @import 'config';
 @import 'home';
 @import 'menu';
