--- a/_home.scss
+++ b/_home.scss
@@ -1,3 +1,10 @@
+/*
+NIC DGL 203
+Assignment 4B
+Student: Will Lewthwaite
+Modified Date: 26 November, 2021
+*/
+
 .home {
     height: 100%;
     padding-top: 40vh;
