--- a/_menu.scss
+++ b/_menu.scss
@@ -1,3 +1,10 @@
+/*
+NIC DGL 203
+Assignment 4B
+Student: Will Lewthwaite
+Modified Date: 26 November, 2021
+*/
+
 .menu-btn {
     position: absolute;
     z-index: 1;
@@ -16,5 +23,30 @@
         height: 3px;
         background: set-text-color($primary-color);
         @include transition-ease;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -8px;
+            width: 28px;
+            height: 3px;
+            background: set-text-color($primary-color);
+            @include transition-ease;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 8px;
+            width: 20px;
+            height: 3px;
+            background: set-text-color($primary-color);
+            @include transition-ease; 
+        }
+
+        &.open {
+            transform: rotate(720deg);
+            background: transparent;
+        }
     }
 }
