Add transform/translate to menu burger
Also fixed typos

--- a/_menu.scss
+++ b/_menu.scss
@@ -15,7 +15,7 @@ Modified Date: 26 November, 2021
     cursor: pointer;
     @include transition-ease;
 
-    &_burger {
+    &__burger {
         position: absolute;
         right: 0;
         top: 0.5rem;
@@ -47,6 +47,15 @@ Modified Date: 26 November, 2021
         &.open {
             transform: rotate(720deg);
             background: transparent;
+
+            &::before {
+                transform: rotate(45deg) translate(5px, 8px);
+            }
+
+            &::after {
+                width: 28px;
+                transform: rotate(-45deg) translate(3px, -7px);
+            }
         }
     }
 }
