--- a/_menu.scss
+++ b/_menu.scss
@@ -88,6 +88,19 @@ Modified Date: 26 November, 2021
         &.open {
             transform: translateY(0);
         }
+
+        &__item {
+            transform: translateX(100vw);
+            @include transition-ease;
+
+            &.open {
+                transform: translateX(0);
+            }
+
+            &.active > a {
+                color: $secondary-color;
+            }
+        }
     }
 
 }
