--- a/_menu.scss
+++ b/_menu.scss
@@ -114,8 +114,12 @@ Modified Date: 26 November, 2021
             &:hover {
                 color: $secondary-color;
             }
+        }    
+    }
+}
 
-        }
-    
+@for $i from 1 through 4 {
+    .menu-nav__item:nth-child(#{$i}) {
+      transition-delay: ($i * 0.1s) + 0.15s;
     }
 }
