--- a/_home.scss
+++ b/_home.scss
@@ -23,7 +23,7 @@ Modified Date: 26 November, 2021
     &__name {
         font-size: 5rem;
         padding-bottom: 1rem;
-        margin-top: 1rem;
+        margin-bottom: 1rem;
         border-bottom: 2px solid set-text-color($primary-color);
 
         &--last {
