--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,7 @@ Modified Date: 26 November, 2021
 @import 'config';
 @import 'home';
 @import 'menu';
+@import 'about';
 
 body {
     background: $primary-color;
@@ -26,6 +27,10 @@ h1, h2, h3 {
 a {
     color: set-text-color($primary-color);
     text-decoration: none;
+}
+
+.text-secondary {
+    color: $secondary-color;
 }
 
 header {
