--- a/_about.scss
+++ b/_about.scss
@@ -16,9 +16,18 @@
      flex-direction: column;
      align-items: center;
      justify-content: flex-end;
+     
+      p {
+         margin-bottom: 2rem;
+       }
     }
+    
+    &__bio {
+        width: 80%;
+        text-align: center;
 
-    p {
-        margin-block-end: 2rem;
+        .text-secondary {
+            padding-bottom: 1rem;
+        }
     }
 }
