--- a/main.css
+++ b/main.css
@@ -226,6 +226,18 @@ Modified Date: 26 November, 2021
 .about__bio .text-secondary {
   padding-bottom: 1rem;
 }
+.about .jobs {
+  width: 60vw;
+  margin: 2rem auto 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 2rem;
+}
+.about .jobs__job {
+  background: #414141;
+  padding: 0.5rem;
+  border-bottom: 5px solid #ff652f;
+}
 
 body {
   background: #272727;
