--- a/_about.scss
+++ b/_about.scss
@@ -56,7 +56,7 @@
         flex-direction: column;
     }
 
-    .footer {
+    footer {
       transform:
         rotate(90deg)
         translate(-3rem, -5rem);
