--- a/_about.scss
+++ b/_about.scss
@@ -1,3 +1,10 @@
+/*
+NIC DGL 203
+Assignment 4B
+Student: Will Lewthwaite
+Modified Date: 27 November, 2021
+*/
+
 .about {
     padding-bottom: 2rem;
 
