--- a/main.scss
+++ b/main.scss
@@ -10,6 +10,7 @@ Modified Date: 29 November, 2021
 @import 'home';
 @import 'menu';
 @import 'about';
+@import 'projects'
 
 body {
     background: $primary-color;
