--- a/_projects.scss
+++ b/_projects.scss
@@ -47,6 +47,25 @@ Modified Date: 29 November, 2021
         img {
             width: 100%;
         }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            background: $secondary-color;
+            opacity: 0;
+            @include transition-ease;
+        }
+
+        &::hover {
+            &::after {
+                top: 0;
+                opacity: 0.9;
+            }
+        }
+
     }
 
     .social-icons {
