--- a/main.css
+++ b/main.css
@@ -324,7 +324,7 @@ Modified Date: 29 November, 2021
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-.projects__item::hover::after {
+.projects__item:hover::after {
   top: 0;
   opacity: 0.9;
 }
