--- a/_projects.scss
+++ b/_projects.scss
@@ -53,6 +53,7 @@ Modified Date: 29 November, 2021
             position: absolute;
             top: 100%;
             left: 0;
+            height: 100%;
             width: 100%;
             background: $secondary-color;
             opacity: 0;
@@ -64,7 +65,7 @@ Modified Date: 29 November, 2021
                 top: 0;
                 opacity: 0.9;
             }
-        }
+        } /* This will bring up a cool overlay on hover. Noted for future reference.*/
 
     }
 
