--- a/main.css
+++ b/main.css
@@ -309,6 +309,7 @@ Modified Date: 29 November, 2021
   border-bottom: 5px solid #ff652f;
   overflow: hidden;
   cursor: pointer;
+  /* This will bring up a cool overlay on hover. Noted for future reference.*/
 }
 .projects__item img {
   width: 100%;
@@ -328,6 +329,33 @@ Modified Date: 29 November, 2021
 .projects__item:hover::after {
   top: 0;
   opacity: 0.9;
+}
+.projects__item:hover .projects__btn {
+  opacity: 1;
+}
+.projects__btns {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+.projects__btn {
+  opacity: 0;
+  -webkit-column-rule: #000;
+     -moz-column-rule: #000;
+          column-rule: #000;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.projects__btn:hover {
+  color: #fff;
 }
 .projects .social-icons {
   display: -webkit-box;
