--- a/_projects.scss
+++ b/_projects.scss
@@ -86,7 +86,7 @@ Modified Date: 29 November, 2021
 
     &__btn {
         opacity: 0;
-        column-rule: set-text-color($secondary-color);
+        color: set-text-color($secondary-color);
         @include transition-ease;
 
         &:hover {
