--- a/main.scss
+++ b/main.scss
@@ -11,6 +11,7 @@ Modified Date: 29 November, 2021
 @import 'menu';
 @import 'about';
 @import 'projects';
+@import 'contact';
 
 body {
     background: $primary-color;
