Align contact items

--- a/_contact.scss
+++ b/_contact.scss
@@ -11,6 +11,7 @@ Modified Date: 29 November, 2021
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    align-items: center;
     background:
     linear-gradient(
         to right,
