--- a/_contact.scss
+++ b/_contact.scss
@@ -32,4 +32,9 @@ Modified Date: 29 November, 2021
         grid-gap: 2rem;
         font-size: 1.5rem;
     }
+
+    .social-icons {
+        position: initial;
+        margin-top: 2rem;
+    }
 }
