Create responsive mixins

--- a/main.scss
+++ b/main.scss
@@ -12,6 +12,7 @@ Modified Date: 29 November, 2021
 @import 'about';
 @import 'projects';
 @import 'contact';
+@import 'responsive';
 
 body {
     background: $primary-color;
