--- a/_responsive.scss
+++ b/_responsive.scss
@@ -27,4 +27,16 @@
     .about__bio {
         font-size: 1.5rem;
     }
+
+    .projects {
+        &__bio-image {
+            height: 40vh;
+        }
+        &__items {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .text-secondary {
+            font-size: 3rem;
+        }
+    }
 }
