--- a/main.css
+++ b/main.css
@@ -445,6 +445,10 @@ Modified Date: 29 November, 2021
   .projects .text-secondary {
     font-size: 3rem;
   }
+
+  .contact__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 body {
   background: #272727;
