Applied media-xl responsiveness

--- a/_responsive.scss
+++ b/_responsive.scss
@@ -54,4 +54,14 @@
             font-size: 3rem;
         }
     }
+    .contact__list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+}
+
+@include media-xl {
+    .projects__bio-image {
+        height: 50vh;
+    }
 }
